<resources>
    <string name="app_name">PetShopProject</string>
    <string name="location">Location:</string>
    <string name="description">Description:</string>
    <string name="shop_name">Shop Name</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="cancel">Cancel</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price:</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="view_your_cart">View your cart</string>
    <string name="place_order">Place order</string>
    <string name="use_your_location">Use your location</string>
    <string name="use_another_location">Use another location</string>
    <string name="another_location">another location</string>
    <string name="your_profile">Your profile</string>
    <string name="username">Username:</string>
    <string name="e_mail">E-mail:</string>
    <string name="phone_number">Phone number:</string>
</resources>