<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment"
    android:background="@color/teal_700">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">
    <TextView
        android:id="@+id/username_profile"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:text="@string/username"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/email_profile"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:text="@string/e_mail"
        android:layout_gravity="center"/>
        <TextView
            android:id="@+id/phone_number_profile"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:text="@string/phone_number"
            android:layout_gravity="center"/>
    <TextView
        android:id="@+id/location_profile"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:text="@string/location"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/cancel_profile"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:text="@string/cancel"
        android:layout_gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>