<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProductFragment"
    android:background="@color/teal_700">
    <FrameLayout
        android:id="@+id/list"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/counter_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/purple_200"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/product_name"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:textAlignment="center"
            android:singleLine="false"
            android:layout_gravity="top|center"/>
        <TextView
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/description"
            android:layout_margin="10dp"
            android:textSize="14dp"
            android:textAlignment="center"
            android:singleLine="false"
            android:layout_gravity="center_horizontal|center_vertical"/>
        <TextView
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/price"
            android:layout_margin="10dp"
            android:textSize="14dp"
            android:textAlignment="center"
            android:singleLine="false"
            android:layout_gravity="bottom|center"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/counter_layout"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/list"
        app:layout_constraintBottom_toTopOf="@id/counter_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">
        <Button
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/less_button"
            android:text="@string/less"
            android:layout_height="50dp"
            android:layout_width="145dp"
            android:layout_margin="5dp"/>
        <TextView
            android:id="@+id/counter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="150dp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center"
            android:text="0"
            android:textSize = "30dp" />
        <Button
            android:layout_gravity="right"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/more_button"
            android:text="@string/more"
            android:layout_height="50dp"
            android:layout_width="145dp"
            android:layout_margin="5dp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_marginTop="50dp"
        android:layout_width="350dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/counter_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">
        <Button
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/add_to_cart"
            android:text="@string/add_to_cart"
            android:layout_height="50dp"
            android:layout_width="145dp"
            android:layout_margin="5dp"/>
        <Button
            android:layout_gravity="right"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/cancel_order"
            android:text="@string/cancel"
            android:layout_height="50dp"
            android:layout_width="145dp"
            android:layout_margin="5dp"/>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>