<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ShopLayoutFragment"
    android:background="@color/teal_700">
    <Button
        android:id="@+id/view_your_cart"
        android:layout_height="50dp"
        android:layout_width="0dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/view_your_cart"/>
    <FrameLayout
        android:id="@+id/list"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/view_your_cart"
        app:layout_constraintBottom_toTopOf="@id/products_recyclerview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/purple_200"
        android:layout_margin="10dp">
    <TextView
        android:id="@+id/shop_name_for_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/shop_name"
        android:layout_margin="10dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:singleLine="false"
        android:layout_gravity="top|center"/>
    <TextView
        android:id="@+id/shop_description_for_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/description"
        android:layout_margin="10dp"
        android:textSize="14dp"
        android:textAlignment="center"
        android:singleLine="false"
        android:layout_gravity="center_horizontal|center_vertical"/>
    <TextView
        android:id="@+id/shop_location_for_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/location"
        android:layout_margin="10dp"
        android:textSize="14dp"
        android:textAlignment="center"
        android:singleLine="false"
        android:layout_gravity="bottom|center"/>
    </FrameLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/products_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>